Fixes for devcontainer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ test = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/jupyter/echo_kernel"
+Homepage = "https://github.com/ucrdrk/lc3_kernel"
 
 [tool.hatch.version]
 path = "lc3_kernel/__init__.py"
