--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "cpus": 4
   },
   "waitFor": "onCreateCommand",
-  "updateContentCommand": "",
+  "updateContentCommand": "python3 -m pip install .",
   "postCreateCommand": "",
   "customizations": {
     "codespaces": {
